migdb.qvto/transforms/tests/validator_postgresql/test_err_invalid_02_required.qvto
import builder_errors;

modeltype ERR uses "http://www.collectionspro.eu/jam/mm/errors";
transformation test_err_invalid_02_required(out outModel : ERR);


main() {
	var error : Error := _validationError("Schema \"public\" contains duplicit table name - \"" +
		"collision\"", "validator_postgresql.qvto"); 
	_errorLog(OrderedSet{error});	 
}